# text-stats-lambda

./: README.md  cdk.json  package-lock.json  package.json
lib/: spacy-lambda-stack.ts  stack.ts
src/: index.py  pyproject.toml
test/: spacy-lambda.test.ts
