[tool.poetry]
name = "text-stats-lambda"
version = "0.1.0"
description = ""
authors = ["Cass Petrus <cass@petrus.me>"]
readme = "README.md"
packages = [{include = "text_stats_lambda"}]

[tool.poetry.dependencies]
python = "^3.9"
spacy = ">=3.4,<3.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
